Overflow fixes§

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 
 .App {
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
 }
